kubernetes-dashboard/k8s-ingress.yaml
<<<<<<< HEAD
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        # annotations:
          # kubernetes.io/ingress.class: nginx
    #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: cilsyk8sdashboard.hansenfernando.xyz
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
